src/main/java/com/example/cotacao/errors/BusinessError.java
package com.example.cotacao.errors;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class BusinessError extends RuntimeException {
    private String message;
}
